<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PK短链</string>
    <string name="item_1">配置程序</string>
    <string name="item_2">重置地址</string>
    <string name="item_3">关于</string>
    <string name="item_4">语言</string>
    <string name="app_main_edit">输入长链或短链</string>
    <string name="app_top_sc">生成短链</string>
    <string name="app_top_off">启/禁 用</string>
    <string name="app_top_look">查访问量</string>
    <string name="app_top_edit_s">编辑短链</string>
    <string name="app_top_edtir">短链记录</string>
    <string name="app_con_t1">http://pkpk.run/?da12ft</string>
    <string name="app_con_t2">ID: [20]\n长链: [http://pkpk.run/?da12ft]\n可访问: [是]\n防洪: [启用]\n访问量: [20]\n生成日期: [2021–08-01 20:20:20]</string>
    <string name="item1_1">保存修改</string>
    <string name="item1_2">安全退出</string>
    <string name="item1_3">恢复默认配置</string>
    <string name="app_info">程序配置</string>
    <string name="sql_info1">数据库配置</string>
    <string name="sql_info2">数据库地址</string>
    <string name="sql_info3">一般是内部地址，127.0.0.1 或 localhost</string>
    <string name="sql_info4">localhost</string>
    <string name="todo">break</string>
    <string name="sql_info5">用户名</string>
    <string name="sql_info6">数据库用户名</string>
    <string name="sql_info7">root</string>
    <string name="sql_info8">用户密码</string>
    <string name="sql_info9">数据库用户密码</string>
    <string name="sql_info10">root</string>
    <string name="sql_info11">数据库名</string>
    <string name="sql_info12">数据库名，宝塔一般与用户名相同</string>
    <string name="sql_info13">short</string>
    <string name="sql_info14">数据库表名</string>
    <string name="sql_info15">数据库表名，一般用于存放数据，可不改</string>
    <string name="sql_info16">short_url</string>
    <string name="info_url1">短链配置</string>
    <string name="info_url2">短链长度</string>
    <string name="info_url3">生成短链的长短，只能控制后面随机码的长短</string>
    <string name="info_url4">6</string>
    <string name="info_url5">短链出错跳转</string>
    <string name="info_url6">短链出错后将跳转的网址</string>
    <string name="info_url7">short.html</string>
    <string name="info_url8">短链禁用跳转</string>
    <string name="info_url9">短链禁用后将跳转的网址</string>
    <string name="info_url10">short.html</string>
    <string name="safe_sys1">安全配置</string>
    <string name="safe_sys2">远程调试</string>
    <string name="safe_sys3">可远程调试php，非必要，勿开启</string>
    <string name="safe_sys4">过期时间</string>
    <string name="safe_sys5">post链接过时时间，防止恶意提交，单位秒</string>
    <string name="safe_sys6">60</string>
    <string name="safe_sys7">加密密钥</string>
    <string name="d_sys">加密密钥，留空使用初始值</string>
    <string name="safe_sys8">post内容加密密钥，防止盗用接口</string>
    <string name="safe_sys9">12345678</string>
    <string name="safe_sys10">开放短链生成</string>
    <string name="safe_sys11">开放后网页端其他人也可以用</string>
    <string name="root_info1">管理员配置</string>
    <string name="root_info2">管理员密码</string>
    <string name="root_info3">用于修改配置，非必要，勿泄漏</string>
    <string name="root_info4">123456</string>
    <string name="root_info5">管理员账号</string>
    <string name="root_info6">用于修改配置，非必要，勿泄漏</string>
    <string name="root_info7">123</string>
    <string name="app_cn">取消</string>
    <string name="app_ok">确认</string>
    <string name="edit_t1">修改短链</string>
    <string name="edit_t2">原链接</string>
    <string name="edit_t3">原链接</string>
    <string name="edit_t4">短链ID  -伪静态下不支持中文</string>
    <string name="edit_t5">短链后的ID，支持中文，不支持特殊符号</string>
    <string name="edit_t6">当前访问量</string>
    <string name="edit_t7">是否开启防红</string>
    <string name="edit_t8" tools:ignore="TypographyDashes">生成时间：2021–08-19 20:11:20</string>
    <string name="edit_t9">数据库ID：10</string>
    <string name="edit_t10">是否开启访问</string>
    <string name="copy_1">复制</string>
    <string name="copy_2">退出</string>
    <string name="app_re_user">重置管理员</string>
    <string name="github">Github</string>
    <string name="my_boke">博客</string>
    <string name="my_qq">QQ</string>
    <string name="my_weixin">微信</string>
    <string name="delete_title">删除此条短链</string>
    <string name="me_editApp">服务端版本1.2%sAPP版本%s%s有bug，升级功能等，请联系作者</string>
    <string name="safe_sys13">开启伪静态</string>
    <string name="safe_sys14">如果你安装在分目录请勿开启, 伪静态不支持中文</string>
</resources>