<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="40dp"
              android:background="@color/background"
              android:gravity="center_vertical" android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
        <TextView
                android:ellipsize="middle"
                android:singleLine="true"
                android:id="@+id/d_t1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/time2"
                android:gravity="start"
                android:layout_weight="1"/>

        <TextView
                android:visibility="gone"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:background="@drawable/shape_ok"
                android:id="@+id/d_b3"
                android:text="@string/copy_1"
                android:textColor="#FFFFFFFF"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="6dp"
                android:paddingHorizontal="16dp"/>

        <ProgressBar
                android:id="@+id/d_p1"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

    </LinearLayout>


    <LinearLayout
            android:visibility="gone"
            android:id="@+id/d_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="30dp">


        <TextView
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:background="@drawable/shape_cn"
                android:id="@+id/d_b2"
                android:text="@string/copy_2"
                android:textColor="@color/time2"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:paddingHorizontal="20dp"
                android:layout_marginEnd="10dp"/>


        <TextView
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:background="@drawable/shape_ok"
                android:id="@+id/d_b1"
                android:text="@string/copy_1"
                android:textColor="#FFFFFFFF"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:paddingHorizontal="20dp"/>
    </LinearLayout>


</LinearLayout>